Added custom dockerfile, descriptor changes